[bumpversion]
current_version = 0.1.0
commit = False
tag = False

[bumpversion:file:cup1d/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = cup1d
version = attr: cup1d.__version__
author = Andreu Font-Ribera et al.
author_email = afont@ifae.es
description = Cosmology using P1D - small scale clustering of the Lyman alpha forest
license = GPL-v3

[options]
package_dir = 
    =src
packages = find_namespace:
include_package_data = True
python_requires = >=3.8
install_requires = file: requirements.txt

[options.packages.find]
where = src

[options.package_data]
lace = 
	data_files/*

# [options.entry_points]
# console_scripts = 
# 	compute_mpg_emu_cosmo = lace.scripts.compute_mpg_emu_cosmo:main
# 	compute_nyx_emu_cosmo = lace.scripts.compute_nyx_emu_cosmo:main